# perfectcrop

./: README.md  grid.py  grid_solo.py  ideas.txt  main.py  perfect_crop.py  pyproject.toml  shots.py  splice_shots.py  standardize_solo.py  video_standardize  video_standardize.py
perfectcrop/: __init__.py  cli.py  grid.py  perfect_crop.py  shots.py  video_standardize.py
source_clips/: info.txt
standalones/: perfectcrop_solo.py  usage.md
tutorial/: tutorial.md
