[tool.poetry]
name = "perfectcrop"
version = "1.1.1"
authors = ["Rebecca Picanso <rebeccapicansot@gmail.com>"]
description = "A video cropping tool for artists that detects an object, finds the average center pixel of the bounding box, and crops out from center without a decrease in video quality."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["object detection", "video"]
classifiers = [
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.35.2"
moviepy = "^1.0.3"
opencv-python = "^4.8.1.78"
scenedetect = "^0.6.2"
ffmpeg = "^1.4"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
perfectcrop = "perfectcrop.cli:main"


